# ling-shen-siblings

./: README.md  license
ling/: CMakeLists.txt  README.md
ling/inc/: ling.defs.h  ling.h  ling.motors.h  ling.rc.h  ling.serial.h
ling/src/: main.cpp
shen/: CMakeLists.txt  README.md  pico_extras_import_optional.cmake
shen/inc/: shen.defs.h  shen.h  shen.motors.h  shen.rc.h  shen.serial.h
shen/src/: main.cpp
